--- a/src/styles.css
+++ b/src/styles.css
@@ -19,15 +19,37 @@
 body {
     margin:0;
     padding:0;
+    width:100%;
+    height: 100%;
     overflow: hidden;
     font-family: "Open Sans", Aria, sans-serif;
 }
 
-header {
+/* <main> used to create sticky footer */
+.page-wrap {
+ min-height: 100%;
+  /* equal to footer height */
+  margin-bottom: -1em; 
+}
+
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+
+/* footer height */
+.page-footer, .page-wrap:after {
+  height: 3.5em; 
+}
+
+header, footer {
     width: 100%;
-    margin:0 0 1em 0;
     background-color:black;
     color: white;
+}
+
+header {
+    margin:0 0 2em 0;
 }
 
 header h1 {
@@ -45,7 +67,7 @@ header a {
 }
 
 section p, footer p {
-    margin: 20px 20px;
+    margin: 0.5em;
 }
 
 figure {
@@ -55,6 +77,10 @@ figure {
 figcaption {
     background-color: #eee;
     border-radius: 0 0 6px 6px;
+}
+
+footer p {
+    padding: 1em 0 0.5em 0;
 }
 
 /* container for canvas, here a figure element */
