--- a/src/styles.css
+++ b/src/styles.css
@@ -39,6 +39,9 @@ canvas {
 /* progress bar container (DOM window) */
 
 .dom-ui-progress-container {
+    font-family: arial, sans-serif;
+    font-size: 80%;
+    color: #ccd;
     position: absolute;
     width: 300px;
     padding: 20px;
@@ -46,11 +49,16 @@ canvas {
     left: 50%;
     margin: 70px 0 0 -170px;
     border-radius: 6px;
-    background-color: #dbf; /* fallback */
+    background-color: #3816BC; /* fallback */
     background-color: rgba(56, 22, 188, 0.9);
     text-align:center;
     z-index:9999;
     display:none;
+}
+
+/* text above the <progress> bar */
+.dom-ui-progress-container div {
+    padding-bottom: 0.5em;
 }
 
 /* actual <progress> bar */
